--- a/app/src/main/res/layout/activity_planner.xml
+++ b/app/src/main/res/layout/activity_planner.xml
@@ -16,6 +16,7 @@
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="35dp"
         android:onClick="buttonListener"
+        android:tooltipText="Add Routine"
         android:tint="@android:color/white"
         app:backgroundTintMode="src_over"
         app:layout_constraintBottom_toBottomOf="parent"
