--- a/app/src/main/res/layout/activity_planner_adapter.xml
+++ b/app/src/main/res/layout/activity_planner_adapter.xml
@@ -13,7 +13,7 @@
     android:paddingTop="@dimen/row_padding_vertical">
 
     <TextView
-        android:id="@+id/routine"
+        android:id="@+id/routineRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -21,22 +21,22 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/weight"
+        android:id="@+id/weightRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/routine"/>
+        android:layout_below="@id/routineRow"/>
 
     <TextView
-        android:id="@+id/numSets"
+        android:id="@+id/setRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true" />
 
     <TextView
-        android:id="@+id/numReps"
+        android:id="@+id/repsRow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/numSets"/>
+        android:layout_below="@id/setRow"/>
 
 </RelativeLayout>
