--- a/app/src/main/res/layout/planner_text_view.xml
+++ b/app/src/main/res/layout/planner_text_view.xml
@@ -15,24 +15,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:textSize="16dp"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
     <TextView
         android:id="@+id/weight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textSize="18sp"
         android:layout_below="@id/title" />
 
     <TextView
         android:id="@+id/sets"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="18sp"
         android:layout_alignParentRight="true" />
 
     <TextView
         android:id="@+id/reps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="18sp"
         android:layout_alignParentRight="true" />
 </android.support.constraint.RelativeLayout>
