--- a/app/src/main/res/layout/activity_planner_adapter.xml
+++ b/app/src/main/res/layout/activity_planner_adapter.xml
@@ -93,6 +93,6 @@
         android:layout_height="30dp"
         android:layout_marginStart="42dp"
         android:layout_marginTop="50dp"
-        app:srcCompat="@drawable/weight" />
+        app:srcCompat="@drawable/weights" />
 
 </RelativeLayout>
