--- a/app/src/main/res/layout/activity_rep_counter.xml
+++ b/app/src/main/res/layout/activity_rep_counter.xml
@@ -1,4 +1,5 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rep_counter_activity_view"
     android:layout_width="match_parent"
@@ -8,30 +9,70 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
+
     <TextView
-        android:id="@+id/title_text_view"
+        android:id="@+id/txtNumReps"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/intro_text" />
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:layout_below="@id/title_text_view">
-        <com.example.derek.gymbuddy.logger.LogView
-            android:id="@+id/sample_logview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scrollbars="vertical" />
-    </ScrollView>
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/rep"
+        android:gravity="center"
+        android:textSize="28sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/button"
+    <ProgressBar
+        android:id="@+id/progressbarBar"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="242dp"
+        android:layout_height="75dp"
+        android:layout_marginStart="177dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="170dp"
+        android:progress="0"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.522"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtNumReps" />
+
+    <TextView
+        android:id="@+id/txtNumSets"
+        android:layout_width="104dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="30dp"
+        android:text="@string/set"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtNumReps" />
+
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="273dp"
+        android:layout_height="322dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginEnd="52dp"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/txtRepsRemaining"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="130dp"
-        android:layout_marginTop="200dp"
-        android:onClick="talkClick"
-        android:text="Button" />
-</RelativeLayout>
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="7dp"
+        android:text="@string/reps_remaining"
+        android:gravity="center"
+        android:textSize="22sp"
+        app:layout_constraintBottom_toTopOf="@+id/listView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/progressbarBar" />
+</android.support.constraint.ConstraintLayout>
