--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -8,13 +8,15 @@
         android:visible="true"
         app:showAsAction="never" />
 
-    <item android:id="@+id/action_unregister_listener"
-        android:title="action_unregister_listener"
-        android:orderInCategory="100"
+    <item
+        android:id="@+id/action_planner"
+        android:title="@string/workout_planner"
+        android:visible="true"
         app:showAsAction="never" />
 
-    <item android:id="@+id/action_read_data"
-        android:title="Read step data"
-        android:orderInCategory="100"
+    <item
+        android:id="@+id/action_repcounter"
+        android:title="@string/rep_counter"
+        android:visible="true"
         app:showAsAction="never" />
 </menu>
