--- a/wearapplication/src/main/res/layout/activity_wear.xml
+++ b/wearapplication/src/main/res/layout/activity_wear.xml
@@ -17,16 +17,11 @@
 
         <TextView
             android:id="@+id/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/hello_world" />
-
-        <Button
-            android:id="@+id/btn"
-            android:layout_width="wrap_content"
-            android:layout_height="59dp"
-            android:layout_gravity="bottom|right"
-            android:text="Button" />
+            android:layout_width="141dp"
+            android:layout_height="141dp"
+            android:textSize="50sp"
+            android:gravity="center"
+            android:text="0" />
 
     </FrameLayout>
 </android.support.wear.widget.BoxInsetLayout>
