--- a/app/src/main/res/layout/activity_planner.xml
+++ b/app/src/main/res/layout/activity_planner.xml
@@ -5,15 +5,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:showIn="@layout/activity_main"
-    tools:context=".MainActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="vertical" />
+        android:layout_height="675dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavView_bar"
+        tools:layout_editor_absoluteX="0dp" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/btnAddRoutine"
@@ -22,14 +22,14 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="35dp"
+        android:layout_marginBottom="7dp"
         android:onClick="buttonListener"
         android:tint="@android:color/white"
         android:tooltipText="Add Routine"
         app:backgroundTintMode="src_over"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavView_bar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.969"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/dumbbell" />
 
@@ -40,6 +40,76 @@
         android:gravity="center"
         android:text="No Records"
         android:visibility="gone" />
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/bottomNavView_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_gravity="bottom">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/bottomToolbar"
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:weightSum="100">
+
+
+                <ImageView
+                    android:id="@+id/gymsNearby"
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:layout_weight="20"
+                    android:onClick="buttonListener"
+                    android:clickable="true"
+                    android:src="@drawable/ic_placeholder" />
+
+                <ImageView
+                    android:id="@+id/repCount"
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:layout_weight="20"
+                    android:onClick="buttonListener"
+                    android:clickable="true"
+                    android:src="@drawable/ic_counting" />
+
+                <ImageView
+                    android:id="@+id/mainMenu"
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:layout_weight="20"
+                    android:onClick="buttonListener"
+                    android:clickable="true"
+                    android:src="@drawable/ic_homepage" />
+
+                <ImageView
+                    android:id="@+id/lookup"
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:layout_weight="20"
+                    android:onClick="buttonListener"
+                    android:clickable="true"
+                    android:src="@drawable/ic_browse" />
+
+                <ImageView
+                    android:id="@+id/history"
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:layout_weight="20"
+                    android:onClick="buttonListener"
+                    android:clickable="true"
+                    android:src="@drawable/ic_diagram" />
+            </LinearLayout>
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
 </android.support.constraint.ConstraintLayout>
 
 
