--- a/app/src/main/res/layout/activity_weight_history_list.xml
+++ b/app/src/main/res/layout/activity_weight_history_list.xml
@@ -1,9 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/activity_weight_history_list"
     tools:context=".WeightHistoryListActivity">
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="675dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavView_bar"
+        tools:layout_editor_absoluteX="0dp"/>
+
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/no_records"
+        android:visibility="gone" />
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/bottomNavView_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_gravity="bottom">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/bottomToolbar"
+            android:layout_width="match_parent"
+
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:weightSum="100">
+
+
+                <ImageView
+                    android:id="@+id/planner"
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:layout_weight="20"
+                    android:onClick="buttonListener"
+                    android:clickable="true"
+                    android:src="@drawable/ic_list" />
+
+                <ImageView
+                    android:id="@+id/repCount"
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:layout_weight="20"
+                    android:onClick="buttonListener"
+                    android:clickable="true"
+                    android:src="@drawable/ic_counting" />
+
+                <ImageView
+                    android:id="@+id/mainMenu"
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:layout_weight="20"
+                    android:onClick="buttonListener"
+                    android:clickable="true"
+                    android:src="@drawable/ic_homepage" />
+
+                <ImageView
+                    android:id="@+id/lookup"
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:layout_weight="20"
+                    android:onClick="buttonListener"
+                    android:clickable="true"
+                    android:src="@drawable/ic_browse" />
+
+                <ImageView
+                    android:id="@+id/gymsNearby"
+                    android:layout_width="0dp"
+                    android:layout_height="35dp"
+                    android:layout_weight="20"
+                    android:onClick="buttonListener"
+                    android:clickable="true"
+                    android:src="@drawable/ic_placeholder" />
+            </LinearLayout>
+        </android.support.v7.widget.Toolbar>
+    </android.support.design.widget.AppBarLayout>
 </android.support.constraint.ConstraintLayout>
